examples/test/testpolicy3076.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3076
  namespace: namespace58
spec:
  podSelector:
    matchLabels:
      key35: value31
      key8: value40
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key43: value40
          key4: value33
      podSelector:
        matchLabels:
          key43: value14
          key21: value5
